<resources>
    <string name="app_name">Run Tracking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- App title and fragment titles -->
    <string name="run_tracker_fragment">RunTrackerFragment</string>
    <string name="run_evaluation_fragment">RunQualityFragment</string>

    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">run Quality 0</string>
    <string name="quality_1">run Quality 1</string>
    <string name="quality_2">run Quality 2</string>
    <string name="quality_3">run Quality 3</string>
    <string name="quality_4">run Quality 4</string>
    <string name="quality_5">run Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR run DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="distance"><![CDATA[<b>Distance:</b>]]></string>
    <string name="hours_runned"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- run quality strings -->
    <string name="how_was_hour_run">How was your run?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>

    <string name="distancia_recorrida">Distancia: </string>
    <string name="run_distance_kms">%s kms</string>
    <string name="hora_de_inicio">Inicio:</string>
    <string name="hora_de_fin">Fin:</string>
    <string name="holder_hora_inicio">2020-10-18 00:00:00</string>
    <string name="holder_hora_fin">2020-10-18 01:00:00</string>

    <string name="run_tracker_map_fragment">Running route map</string>
    <string name="finish_run">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="settings">settings</string>

    <style name="distance_format">"%.2f"</style>

</resources>