<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="run" type="com.curso.runtracking.database.RunTracker" />
        <variable name="clickListener" type="com.curso.runtracking.runtracking.RunTrackListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_run_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="#f2f2f2"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:contentPaddingBottom="12dp"
        app:contentPaddingTop="12dp"
        android:onClick="@{() -> clickListener.onClick(run)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/runImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:runImage="@{run}"
                tools:srcCompat="@drawable/ic_run_0" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/distancia_recorrida"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hora_de_inicio"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textview"
                app:layout_constraintTop_toBottomOf="@+id/textview" />

            <TextView
                android:id="@+id/runDistanceTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toStartOf="@+id/runImageView"
                app:layout_constraintStart_toEndOf="@+id/textview"
                app:layout_constraintTop_toTopOf="@+id/textview"
                app:runDistance="@{run}"
                tools:text="@string/run_distance_kms" />

            <TextView
                android:id="@+id/horaInicioTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text=""
                app:iniHour="@{run}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/runDistanceTextView"
                tools:text="@string/holder_hora_inicio" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hora_de_fin"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/horaFinTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text=""
                app:endHour="@{run}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/horaInicioTextView"
                tools:text="@string/holder_hora_fin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>