<?xml version="1.0" encoding="utf-8"?>

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>
        <variable
            name="runEvaluationViewModel"
            type="com.curso.runtracking.runevaluation.RunEvaluationViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleepquality.SleepQualityFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/triple_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/how_was_hour_run"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@+id/quality_zero_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/quality_zero_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:contentDescription="@string/quality_0"
            android:onClick="@{() -> runEvaluationViewModel.onSetRunQuality(0)}"
            app:layout_constraintEnd_toStartOf="@+id/quality_one_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:srcCompat="@drawable/ic_run_0" />

        <ImageView
            android:id="@+id/quality_one_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_1"
            android:onClick="@{() -> runEvaluationViewModel.onSetRunQuality(1)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_two_image"
            app:layout_constraintStart_toEndOf="@+id/quality_zero_image"
            app:srcCompat="@drawable/ic_run_1" />

        <ImageView
            android:id="@+id/quality_two_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_2"
            android:onClick="@{() -> runEvaluationViewModel.onSetRunQuality(2)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_one_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quality_one_image"
            app:srcCompat="@drawable/ic_run_2" />

        <ImageView
            android:id="@+id/quality_three_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/quality_3"
            android:onClick="@{() -> runEvaluationViewModel.onSetRunQuality(3)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quality_four_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quality_zero_image"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_run_3" />

        <ImageView
            android:id="@+id/quality_four_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quality_4"
            android:onClick="@{() -> runEvaluationViewModel.onSetRunQuality(4)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_three_image"
            app:layout_constraintEnd_toStartOf="@+id/quality_five_image"
            app:layout_constraintStart_toEndOf="@+id/quality_three_image"
            app:layout_constraintTop_toTopOf="@+id/quality_three_image"
            app:srcCompat="@drawable/ic_run_4" />

        <ImageView
            android:id="@+id/quality_five_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/margin"
            android:contentDescription="@string/quality_5"
            android:onClick="@{() -> runEvaluationViewModel.onSetRunQuality(5)}"
            app:layout_constraintBottom_toBottomOf="@+id/quality_four_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quality_four_image"
            app:layout_constraintTop_toTopOf="@+id/quality_four_image"
            app:srcCompat="@drawable/ic_run_5" />

        <EditText
            android:id="@+id/runDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="Run Distance?"
            android:text="@={runEvaluationViewModel.runDistance}"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quality_four_image" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="Save"
            android:onClick="@{() -> runEvaluationViewModel.onSaveRunResult()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/runDistance"
            app:layout_constraintTop_toTopOf="@+id/runDistance" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
